--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Home
 
 <h2>Welcome</h2>
 
+<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+
 <p>Welcome to my blog!</p>
 
 <p>I've reproduced a list of recent posts here for your reading pleasure:</p>
@@ -11,4 +13,4 @@ title: Home
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>…or you can find more in the <a href="/archive.html">archives</a>.
